lang/tests/contract/common/ui/fail/10-private-constructor.stderr
error: the visibility for contract constructor should be `pub`
  --> $DIR/10-private-constructor.rs:10:12
   |
10 |         fn new(&mut self) {}
   |            ^^^
